Fixing comment button turning it a real button in all three screens. fixed html headers (h1, h2) not showing in publication. put an id on promotion button and placeholder to link in promotion modal

--- a/app/assets/stylesheets/feed.less
+++ b/app/assets/stylesheets/feed.less
@@ -178,7 +178,7 @@ ul.wysihtml5-toolbar {
 /*.pub_link i:hover{
 	color: black;
 }*/
-.publication .publication_body ul, .publication .publication_body ol{
+.publication .publication_body ul, .publication .publication_body ol, #preview_publication ol, #preview_publication ul{
 	margin: 0 0 10px 25px;
 }
 .publication ul.pub_interact a {
